[project]
name = "denoising-diffusion-pytorch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asttokens==3.0.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "einops==0.8.1",
    "executing==2.2.1",
    "filelock==3.20.3",
    "fonttools==4.61.1",
    "fsspec==2026.1.0",
    "ipykernel==7.1.0",
    "ipython==9.9.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numpy==2.3.5",
    "packaging==26.0",
    "pandas==3.0.0",
    "parso==0.8.5",
    "pillow==12.1.0",
    "pip==25.3",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.1",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "setuptools==80.10.2",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "uv==0.9.26",
    "wcwidth==0.3.5",
]
